--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "commodo-landing",
   "version": "0.1.0",
   "dependencies": {
+    "antd": "^4.4.3",
     "gatsby": "^2.23.12",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-manifest": "^2.4.14",
